--- a/companies_site/templates/base.html
+++ b/companies_site/templates/base.html
@@ -4,13 +4,38 @@
     <head>
         <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
         <title>Companies</title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
     </head>
 
     <body>
-    {% if user.is_authenticated %}
-        <a href="{% url 'main:logout' %}">Logout</a>
-    {% endif %}
-    {% block content %}
-    {% endblock content %}
+        <nav class="blue darken-1" role="navigation">
+            <div class="nav-wrapper container"><a id="logo-container" href="{% static 'favicon.png' %}" class="brand-logo">Logo</a>
+                <ul class="right hide-on-med-and-down">
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'main:logout' %}">Logout</a></li>
+                    <li><a href="{% url 'companies:index' %}">Companies</a></li>
+                    <li><a href="{% url 'companies:add' %}">New Company</a></li>
+                {% else %}
+                    <li><a href="{% url 'main:index' %}">Login</a></li>
+                {% endif %}
+                </ul>
+
+                <ul id="nav-mobile" class="side-nav">
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'main:logout' %}">Logout</a></li>
+                    <li><a href="{% url 'main:logout' %}">Companies</a></li>
+                {% else %}
+                    <li><a href="{% url 'main:index' %}">Login</a></li>
+                {% endif %}
+                </ul>
+                <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+            </div>
+        </nav>
+        <div class="container">
+            {% block content %}
+            {% endblock content %}
+        </div>
     </body>
 </html>
