replaced input type submit by submit buttons

--- a/companies/templates/companies/add.html
+++ b/companies/templates/companies/add.html
@@ -6,6 +6,6 @@
     <table>
     {{CompanyForm}}
     </table>
-    <input type="submit" value="Confirmed"/>
+    <button type="submit">Save</button>
 </form>
 {% endblock content %}
