changed the index page

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<h1>Login</h1>
 <form method="POST" role="form" action="/">
 {% csrf_token %}
 
@@ -9,8 +10,8 @@
     <input id="password" type="password" name="password">
     <button type="submit">Login</button>
 </form>
-
-<h2>Sign up</h2>
+<h3>Or</h3>
+<h1>Sign up</h1>
 <form method="POST" role="form" action="{% url 'main:signup'%}">
 {% csrf_token %}
 {{ form.as_p }}
