added a dummy logo

--- a/companies_site/templates/base.html
+++ b/companies_site/templates/base.html
@@ -11,7 +11,7 @@
 
     <body>
         <nav class="blue darken-1" role="navigation">
-            <div class="nav-wrapper container"><a id="logo-container" href="{% static 'favicon.png' %}" class="brand-logo">Logo</a>
+            <div class="nav-wrapper container"><img width="100px" src="{% static 'company.png' %}"/>
                 <ul class="right hide-on-med-and-down">
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'main:logout' %}">Logout</a></li>
