--- a/companies/templates/companies/index.html
+++ b/companies/templates/companies/index.html
@@ -1,16 +1,44 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Companies</h1>
-<a href="{% url 'companies:add' %}">Add a new company</a>
+<a class="btn-large" href="{% url 'companies:add' %}">Add a new company</a>
 {% if companies %}
+    <table class="bordered">
+        <thead>
+            <tr>
+                <td>Name</td>
+                <td>Creation Date</td>
+                <td>Last update</td>
+                <td>address</td>
+                <td>Postal Code</td>
+                <td>City</td>
+                <td>Country</td>
+                <td>Phone</td>
+                <td>Email</td>
+                <td></td>
+                <td></td>
+            </tr>
+        </thead>
+        <tbody>
+        {% for company in companies %}
+        <tr>
+            <td>{{ company.company_name }}</td>
+            <td>{{ company.creation_date }}</td>
+            <td>{{ company.udpate_date }}</td>
+            <td>{{ company.address_line1 }}</td>
+            <td>{{ company.postal_code }}</td>
+            <td>{{ company.city }}</td>
+            <td>{{ company.country_code }}</td>
+            <td>{{ company.phone_number }}</td>
+            <td>{{ company.email }}</td>
+            <td><a class="waves-effect waves-teal btn-flat" href="{% url 'companies:update' company.id %}">update</a></td>
+            <td><a class="waves-effect waves-teal btn-flat" href="{% url 'companies:delete' company.id %}">delete</a></td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
     <ul>
-    {% for company in companies %}
-        <li>
-            {{ company.company_name }}
-            <a href="{% url 'companies:update' company.id %}">update</a>
-            <a href="{% url 'companies:delete' company.id %}">delete</a>
-        </li>
-    {% endfor %}
+
     </ul>
 {% else %}
     <p>No companies are available.</p>
