added username display in welcome page

--- a/main/templates/main/welcome.html
+++ b/main/templates/main/welcome.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Welcome</h1>
+<h1>Welcome {{ user.username }}</h1>
 <a class="btn-large" href="{% url 'companies:index' %}">Go to companies management</a>
 {% endblock content%}
