--- a/companies/templates/companies/add.html
+++ b/companies/templates/companies/add.html
@@ -6,6 +6,6 @@
     <table>
     {{CompanyForm}}
     </table>
-    <button type="submit">Save</button>
+    <button  class="btn-large" type="submit">Save</button>
 </form>
 {% endblock content %}
